# EchoTrans

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  settings.html  snip.html  vite.config.ts
scripts/: release.ps1
src/: popup.css  popup.ts  settings.css  settings.ts  snip.css  snip.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  hotkey.rs  lib.rs  main.rs  mt.rs  snip.rs  translator.rs  tray.rs
