[package]
name = "echotrans"
version = "0.4.1"
description = "连按三次 Ctrl+C 即时 AI 翻译"
authors = ["doudou"]
edition = "2024"

[lib]
name = "echotrans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
arboard = "3"
reqwest = { version = "0.13", features = ["json", "stream"] }
futures-util = "0.3"
xcap = "0.9.6"
image = "0.25.10"
base64 = "0.22.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
